--- a/pages/marks/marks.wxml
+++ b/pages/marks/marks.wxml
@@ -1,13 +1,16 @@
 <view class="container">
   <swiper previous-margin="80rpx" next-margin="80rpx">
-    <swiper-item bindtap="handleGoMarkDetail">
+    <swiper-item
+    wx:for="{{marksList}}"
+    >
+    <navigator url="/pages/markinfo/markinfo?id={{item.id}}">
       <mark-item
-      wx:for="{{marksList}}"
       wx:key="item.id"
       title="{{item.title}}"
       time="{{item.time}}">
         <image class="mark-img" src="{{item.imgUrl}}" mode="widthFix"/>
       </mark-item>
+    </navigator>
     </swiper-item>
     <swiper-item>
       <view class="newMark">
